Cursor should not update on a 20ms timer https://bugs.webkit.org/show_bug.cgi?id=211884 <rdar://problem/63220368>

Reviewed by Antti Koivisto.

Source/WebCore:

Update the cursor during page rendering rather than using a 20ms timer.

* page/EventHandler.cpp:
(WebCore::EventHandler::EventHandler):
(WebCore::EventHandler::clear):
(WebCore::EventHandler::updateCursorIfNeeded):
(WebCore::EventHandler::handleMouseMoveEvent):
(WebCore::EventHandler::scheduleCursorUpdate):
(WebCore::EventHandler::cursorUpdateTimerFired): Deleted.
* page/EventHandler.h:
* page/Page.cpp:
(WebCore::Page::updateRendering):

LayoutTests:

Update a (flaky) test to not use setTimeout() to test a cursor change and instead use requestAnimationFrame()
since cursor updates are now guaranteed to be run before the next requestAnimationFrame() callback.

* fast/events/mouse-cursor-no-mousemove.html:
* platform/mac-wk1/TestExpectations:

Canonical link: https://commits.webkit.org/224783@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261686 268f45cc-cd09-0410-ab3c-d52691b4dbfc